posiGen_FullsendBox/src/objects/NVM_Adoption_Snapshot__c.object
<CustomObject>
    <fields>
        <fullName>Activity_Type__c</fullName>
        <label>Activity Type</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_Role__c</fullName>
        <label>Assigned Role</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned__c</fullName>
        <label>Assigned</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_Date__c</fullName>
        <label>Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Related_Object__c</fullName>
        <label>Related Object</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>NVM Adoption Snapshot</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>NVM Adoption Snapshot Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NVM Adoption Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>